# TalosAI

./: .env.sample  .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 311577c576bc_initial_talosai_db_schema.py  7e6332be5c20_users_table.py
backend/app/: main.py
backend/app/agents/: base.py  blackboard.py  crewai_setup.py  critic.py  factory.py  hybrid_orechstrator.py  local_orchestrator.py  orchestrator.py  planner.py  registry.py  reporter.py  scanner.py  summarizer.py  tester.py  tools.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py  health.py  mission.py  missions.py  sessions.py  status.py  users.py
backend/app/api/v1/endpoints/: auth.py  health.py  mission.py
backend/app/core/: config.py  middleware.py  models.py  ollama.py  security.py  stats.py  status.py
backend/app/crud/: crud_session.py  crud_sessions.py  crud_user.py  crud_users.py
backend/app/db/: session.py
backend/app/db/init/: 01_init.sql
backend/app/models/: __init__.py  user.py  user_session.py  users.py
backend/app/schemas/: agents.py  mission.py  missions.py  sessions.py  user.py  users.py
backend/app/services/: auth_service.py
backend/app/utils/: auth_utils.py
docs/: index.md
docs/api/: auth.md  health.md  index.md  sessions.md  status.md  template.md  users.md
