[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.3)",
    "aiosignal (==1.4.0)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.18.4)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "appdirs (==1.4.4)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "asyncio (==4.0.0)",
    "asyncpg (==0.31.0)",
    "attrs (==25.4.0)",
    "backoff (==2.2.1)",
    "bcrypt (==5.0.0)",
    "build (==1.4.0)",
    "certifi (==2026.2.25)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.5)",
    "chromadb (==1.1.1)",
    "click (==8.1.8)",
    "crewai (==1.10.1)",
    "cryptography (==46.0.5)",
    "deprecation (==2.1.0)",
    "diskcache (==5.6.3)",
    "distro (==1.9.0)",
    "dnspython (==2.8.0)",
    "docker (==7.1.0)",
    "docstring-parser (==0.17.0)",
    "durationpy (==0.10)",
    "email-validator (==2.3.0)",
    "et-xmlfile (==2.0.0)",
    "fastapi (==0.131.0)",
    "fastuuid (==0.14.0)",
    "filelock (==3.25.2)",
    "flatbuffers (==25.12.19)",
    "frozenlist (==1.8.0)",
    "fsspec (==2026.2.0)",
    "googleapis-common-protos (==1.73.0)",
    "greenlet (==3.3.2)",
    "grpcio (==1.78.0)",
    "h11 (==0.16.0)",
    "hf-xet (==1.4.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.7.1)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.3)",
    "huggingface-hub (==1.6.0)",
    "idna (==3.11)",
    "importlib-metadata (==8.7.1)",
    "importlib-resources (==6.5.2)",
    "instructor (==1.14.5)",
    "jinja2 (==3.1.6)",
    "jiter (==0.11.1)",
    "json5 (==0.10.0)",
    "json-repair (==0.25.3)",
    "jsonref (==1.1.0)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "kubernetes (==35.0.0)",
    "lance-namespace (==0.5.2)",
    "lance-namespace-urllib3-client (==0.5.2)",
    "lancedb (==0.29.2)",
    "linkify-it-py (==2.1.0)",
    "litellm (==1.82.2)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "mcp (==1.26.0)",
    "mdit-py-plugins (==0.5.0)",
    "mdurl (==0.1.2)",
    "mmh3 (==5.2.1)",
    "mpmath (==1.3.0)",
    "multidict (==6.7.1)",
    "numpy (==2.4.3)",
    "nvidia-ml-py (==13.590.48)",
    "oauthlib (==3.3.1)",
    "ollama (==0.6.1)",
    "onnxruntime (==1.24.3)",
    "openai (==2.26.0)",
    "openpyxl (==3.1.5)",
    "opentelemetry-api (==1.34.1)",
    "opentelemetry-exporter-otlp-proto-common (==1.34.1)",
    "opentelemetry-exporter-otlp-proto-grpc (==1.34.1)",
    "opentelemetry-exporter-otlp-proto-http (==1.34.1)",
    "opentelemetry-proto (==1.34.1)",
    "opentelemetry-sdk (==1.34.1)",
    "opentelemetry-semantic-conventions (==0.55b1)",
    "orjson (==3.11.7)",
    "overrides (==7.7.0)",
    "packaging (==26.0)",
    "pdfminer-six (==20251230)",
    "pdfplumber (==0.11.9)",
    "pillow (==12.1.1)",
    "platformdirs (==4.9.4)",
    "portalocker (==2.7.0)",
    "posthog (==5.4.0)",
    "propcache (==0.4.1)",
    "protobuf (==5.29.6)",
    "psutil (==7.2.2)",
    "pyarrow (==23.0.1)",
    "pybase64 (==1.4.3)",
    "pycparser (==3.0)",
    "pydantic (==2.11.10)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pyjwt (==2.11.0)",
    "pypdfium2 (==5.6.0)",
    "pypika (==0.51.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.22)",
    "python-nmap (==0.7.1)",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "regex (==2026.1.15)",
    "requests (==2.32.5)",
    "requests-oauthlib (==2.0.0)",
    "rich (==14.3.3)",
    "rpds-py (==0.30.0)",
    "ruff (==0.15.5)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.48)",
    "sse-starlette (==3.3.2)",
    "starlette (==0.52.1)",
    "sympy (==1.14.0)",
    "tenacity (==9.1.4)",
    "textual (==8.1.1)",
    "tiktoken (==0.12.0)",
    "tokenizers (==0.22.2)",
    "tomli (==2.0.2)",
    "tomli-w (==1.1.0)",
    "tqdm (==4.67.3)",
    "typer (==0.23.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uc-micro-py (==2.0.0)",
    "urllib3 (==2.6.3)",
    "uv (==0.9.30)",
    "uvicorn (==0.41.0)",
    "uvloop (==0.22.1)",
    "watchfiles (==1.1.1)",
    "websocket-client (==1.9.0)",
    "websockets (==16.0)",
    "xmltodict (==1.0.4)",
    "yarl (==1.23.0)",
    "zipp (==3.23.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
# Target Python version
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
ignore = []
select = ["F", "E", "W", "I"]

[tool.ruff.format]
# Use double quotes (standard Black style)
line-ending = "auto"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
